--- a/static/development/components/common_componentc/footer/index.scss
+++ b/static/development/components/common_componentc/footer/index.scss
@@ -21,9 +21,16 @@
         }
     }
     &_bottom {
+        @media (max-width: 992px) {
+            flex-direction: column;
+        }
         background: #1F1B20;
         display: flex;
         .google_maps {
+            @media (max-width: 992px) {
+                width: 100%;
+                height: 400px;
+            }
             width: 50%;
             iframe {
                 width: 100%;
@@ -31,6 +38,9 @@
             }
         }
         &_right {
+            @media (max-width: 992px) {
+                width: 100%;
+            }
             width: 50%;
             .contacts_info {
                 padding: 10% 20%;
