--- a/static/development/components/common_componentc/top/index.scss
+++ b/static/development/components/common_componentc/top/index.scss
@@ -1,12 +1,11 @@
 .top {
-    height: 45vw;
+    height: 45.5vw;
     min-height: 400px;
     width: 100%;
     position: relative;
     //overflow: hidden;
     &_title {
         color: #FFFFFF;
-        text-transform: uppercase;
         padding: 10% 28%;
         text-align: center;
         &_wrapper {
@@ -19,12 +18,14 @@
             line-height: 105px;
             white-space: nowrap;
             font-weight: bold;
+            text-transform: uppercase;
         }
         &_1-white {
             font-size: 90px;
             line-height: 105px;
             white-space: nowrap;
             font-weight: bold;
+            text-transform: uppercase;
             span {
                 opacity: 0.2;
             }
@@ -33,6 +34,10 @@
             font-size: 30px;
             line-height: 35px;
             font-weight: 300;
+            text-transform: uppercase;
+        }
+        &_bottom {
+            display: flex;
         }
     }
     &_social {
@@ -81,28 +86,32 @@
             object-fit: cover;
         }
     }
-    &__block_2 {
-        width: 40%;
-        position: absolute;
-        //top: -293px;
-        top: -50%;
-        left: 40%;
-        margin-left: 48px;
+}
 
-        &_wrapper {
-            border: 1px solid #FFFFFF;
-            padding: 39px 36px 0 36px;
-        }
-        img {
-            margin-top: 15px;
-            width: 100%;
-            height: 100%;
-            padding-bottom: 30px;
-            object-fit: cover;
-            border-bottom: 2px solid #959595;
-        }
-        
+.top_img__block_2 {
+    @media (max-width: 992px ) {
+        width: 50%;
     }
+    width: 100%;
+    //position: absolute;
+    //top: -50%;
+    //top: -280px;
+    //left: 40%;
+    margin: 20px 0 0 70px;
+
+    &_wrapper {
+        border: 1px solid #FFFFFF;
+        padding: 39px 36px 0 36px;
+    }
+    img {
+        margin-top: 15px;
+        width: 100%;
+        height: 100%;
+        padding-bottom: 30px;
+        object-fit: cover;
+        border-bottom: 2px solid #959595;
+    }
+    
 }
 
 .block__text {
