--- a/templates/index.html
+++ b/templates/index.html
@@ -44,23 +44,23 @@
     </header>
 
     <section class="top first_padding" style="background: url(/static/source/img/index/Rectangle\ 2.png) 100% 100% no-repeat; background-size: cover;">
-        <div class="top_title">
-            <div class="top_social">
-                <div class="top_social__line top_social__line_1">
-                </div>
-                <div class="top_social__block">
-                    <a href="#">
-                        <img src="/static/source/img/index/Frame 15.svg" alt="">
-                    </a>
-                </div>
-                <div class="top_social__block">
-                    <a href="#">
-                        <img src="/static/source/img/index/Frame 14.svg" alt="">
-                    </a>
-                </div>
-                <div class="top_social__line top_social__line_2">
-                </div>
+        <div class="top_social">
+            <div class="top_social__line top_social__line_1">
             </div>
+            <div class="top_social__block">
+                <a href="#">
+                    <img src="/static/source/img/index/Frame 15.svg" alt="">
+                </a>
+            </div>
+            <div class="top_social__block">
+                <a href="#">
+                    <img src="/static/source/img/index/Frame 14.svg" alt="">
+                </a>
+            </div>
+            <div class="top_social__line top_social__line_2">
+            </div>
+        </div>
+        <div class="top_title">
             <div class="top_title_wrapper">
                 <div class="top_title_1">
                     <span>
@@ -71,10 +71,26 @@
                 <div class="top_title_2">
                     - це мистецтво, нічого більше
                 </div>
-                <div class="btn_wrapper">
-                    <a href="#" class="btn_standart">
-                        Замовити проект
-                    </a>
+                <div class="top_title_bottom">
+                    <div class="btn_wrapper">
+                        <a href="#" class="btn_standart">
+                            Замовити проект
+                        </a>
+                    </div>
+                    <div class="top_img__block_2">
+                        <div class="top_img__block_2_wrapper">
+                            <div class="block__text">
+                                Ми створюємо затишок на кожній 
+                                вуличці та у кожній квартирі чи будинку
+                            </div>
+                            <img src="/static/source/img/index/Rectangle 5.png" alt="">
+                        </div>
+                        <div class="block__text_2">
+                            <b>INNEX</b> - молода та перспективна команда архітекторів та дизайнерів. 
+                            Вишуканий чи лаконічний дизайн інтер’єру, 
+                            багатоповерхівка чи приватний будинок - усе це, і навіть більше, до снаги нашим фахівцям.
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -84,20 +100,7 @@
         <div class="top_img__block_1">
             <img src="/static/source/img/index/Rectangle 7.png" alt="">
         </div>
-        <div class="top_img__block_2">
-            <div class="top_img__block_2_wrapper">
-                <div class="block__text">
-                    Ми створюємо затишок на кожній 
-                    вуличці та у кожній квартирі чи будинку
-                </div>
-                <img src="/static/source/img/index/Rectangle 5.png" alt="">
-            </div>
-            <div class="block__text_2">
-                <b>INNEX</b> - молода та перспективна команда архітекторів та дизайнерів. 
-                Вишуканий чи лаконічний дизайн інтер’єру, 
-                багатоповерхівка чи приватний будинок - усе це, і навіть більше, до снаги нашим фахівцям.
-            </div>
-        </div>
+        
     </section>
 
     <section class="steps container">
