--- a/templates/team.html
+++ b/templates/team.html
@@ -11,35 +11,47 @@
 <body>
 
     <header class="header container">
-        <div class="header_sections">
-            <a href="#">
-                Архітектура
-            </a>
+        <div class="header_main">
+            <div class="header_sections">
+                <a href="#">
+                    Архітектура
+                </a>
+            </div>
+            <div class="header_sections after_logo">
+                <a href="#">
+                    Дизайн
+                </a>
+            </div>
+            <div class="header_logo">
+                <a href="#">
+                    <img src="/static/source/img/header/LOGO.svg" alt="">
+                </a>
+            </div>
+            <div class="header_sections">
+                <a href="#">
+                    еТАПИ РОБОТИ
+                </a>
+            </div>
+            <div class="header_sections">
+                <a href="#">
+                    кОМАНДА
+                </a>
+            </div>
+            <div class="header_sections">
+                <a href="#">
+                    КОНТАКТИ
+                </a>
+            </div>
         </div>
-        <div class="header_sections">
-            <a href="#">
-                Дизайн
-            </a>
-        </div>
-        <div class="header_logo">
-            <a href="#">
-                <img src="/static/source/img/header/LOGO.svg" alt="">
-            </a>
-        </div>
-        <div class="header_sections">
-            <a href="#">
-                еТАПИ РОБОТИ
-            </a>
-        </div>
-        <div class="header_sections">
-            <a href="#">
-                кОМАНДА
-            </a>
-        </div>
-        <div class="header_sections">
-            <a href="#">
-                КОНТАКТИ
-            </a>
+        <div class="header_mob">
+            <div class="header_hamburger" id="hamburger">
+                <div class="header_line header_line_1">
+                </div>
+                <div class="header_line header_line_2">
+                </div>
+                <div class="header_line header_line_3">
+                </div>
+            </div>
         </div>
     </header>
 
