--- a/static/development/components/common_componentc/top/index.scss
+++ b/static/development/components/common_componentc/top/index.scss
@@ -5,6 +5,18 @@
     position: relative;
     //overflow: hidden;
     &_title {
+        @media (max-width: 1400px) {
+            padding: 10% 20%;
+        }
+        @media (max-width: 900px) {
+            padding: 10% 15%;
+        }
+        @media (max-width: 600px) {
+            padding: 5% 10%;
+        }
+        @media (max-width: 600px) {
+            padding: 2% 5%;
+        }
         color: #FFFFFF;
         padding: 10% 28%;
         text-align: center;
@@ -14,6 +26,12 @@
             align-items: flex-start;
         }
         &_1 {
+            @media (max-width: 900px) {
+                font-size: 50px;
+            }
+            @media (max-width: 600px) {
+                font-size: 30px;
+            }
             font-size: 90px;
             line-height: 105px;
             white-space: nowrap;
@@ -31,6 +49,12 @@
             }
         }
         &_2 {
+            @media (max-width: 900px) {
+                font-size: 20px;
+            }
+            @media (max-width: 600px) {
+                font-size: 15px;
+            }
             font-size: 30px;
             line-height: 35px;
             font-weight: 300;
@@ -71,7 +95,7 @@
 }
 
 .top_img {
-    display: flex;
+    //display: flex;
     margin-left: 20px;
     width: calc(100% - 20px);
     &__block_1 {
@@ -91,13 +115,20 @@
 }
 
 .top_img__block_2 {
-    width: 100%;
+    position: absolute;
+    width: 40%;
     //top: -50%;
     //top: -280px;
-    //left: 40%;
+    left: 40%;
     margin: 20px 0 0 70px;
 
     &_wrapper {
+        @media (max-width: 900px) {
+            padding: 20px 20px 0 20px;
+        }
+        @media (max-width: 600px) {
+            padding: 10px 10px 0 10px;
+        }
         border: 1px solid #FFFFFF;
         padding: 39px 36px 0 36px;
     }
@@ -113,6 +144,9 @@
 }
 
 .block__text {
+    @media (max-width: 900px) {
+        font-size: 15px;
+    }
     max-width: 448px;
     font-size: 20px;
     line-height: 23px;
@@ -121,6 +155,9 @@
     margin: 0 auto;
     font-weight: 300;
     &_2 {
+        @media (max-width: 900px) {
+            font-size: 15px;
+        }
         margin-top: 30px;
         width: 100%;
         font-size: 20px;
