--- a/static/development/components/pages/index/index.scss
+++ b/static/development/components/pages/index/index.scss
@@ -9,10 +9,23 @@
         text-align: center;
     }
     &_wrapper {
+        @media (max-width: 1100px) {
+            justify-content: center;
+        }
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
     }
     &_item {
+        @media (max-width: 1100px) {
+            width: 45%;
+            margin-bottom: 20px;
+            margin-right: 20px;
+        }
+        @media (max-width: 550px) {
+            width: 100%;
+            margin-right: 0px;
+        }
         width: 23%;
         padding: 25px;
         background: #FFFFFF;
@@ -45,6 +58,13 @@
         }
     }
     &_btn {
+        @media (max-width: 550px) {
+            flex-direction: column;
+            align-items: center;
+            .steps_btn__block {
+                margin-bottom: 50px;
+            }
+        }
         margin-top: 40px;
         display: flex;
         justify-content: center;
