--- a/static/source/pages/team/index.css
+++ b/static/source/pages/team/index.css
@@ -1274,6 +1274,18 @@ input::-webkit-inner-spin-button {
     color: #FFFFFF;
     padding: 10% 28%;
     text-align: center; }
+    @media (max-width: 1400px) {
+      .top_title {
+        padding: 10% 20%; } }
+    @media (max-width: 900px) {
+      .top_title {
+        padding: 10% 15%; } }
+    @media (max-width: 600px) {
+      .top_title {
+        padding: 5% 10%; } }
+    @media (max-width: 600px) {
+      .top_title {
+        padding: 2% 5%; } }
     .top_title_wrapper {
       display: flex;
       flex-direction: column;
@@ -1284,6 +1296,12 @@ input::-webkit-inner-spin-button {
       white-space: nowrap;
       font-weight: bold;
       text-transform: uppercase; }
+      @media (max-width: 900px) {
+        .top_title_1 {
+          font-size: 50px; } }
+      @media (max-width: 600px) {
+        .top_title_1 {
+          font-size: 30px; } }
     .top_title_1-white {
       font-size: 90px;
       line-height: 105px;
@@ -1297,6 +1315,12 @@ input::-webkit-inner-spin-button {
       line-height: 35px;
       font-weight: 300;
       text-transform: uppercase; }
+      @media (max-width: 900px) {
+        .top_title_2 {
+          font-size: 20px; } }
+      @media (max-width: 600px) {
+        .top_title_2 {
+          font-size: 15px; } }
     .top_title_bottom {
       display: flex; }
   .top_social {
@@ -1313,7 +1337,6 @@ input::-webkit-inner-spin-button {
       z-index: 10; }
 
 .top_img {
-  display: flex;
   margin-left: 20px;
   width: calc(100% - 20px); }
   .top_img__block_1 {
@@ -1330,11 +1353,19 @@ input::-webkit-inner-spin-button {
       object-fit: cover; }
 
 .top_img__block_2 {
-  width: 100%;
+  position: absolute;
+  width: 40%;
+  left: 40%;
   margin: 20px 0 0 70px; }
   .top_img__block_2_wrapper {
     border: 1px solid #FFFFFF;
     padding: 39px 36px 0 36px; }
+    @media (max-width: 900px) {
+      .top_img__block_2_wrapper {
+        padding: 20px 20px 0 20px; } }
+    @media (max-width: 600px) {
+      .top_img__block_2_wrapper {
+        padding: 10px 10px 0 10px; } }
   .top_img__block_2 img {
     margin-top: 15px;
     width: 100%;
@@ -1351,6 +1382,9 @@ input::-webkit-inner-spin-button {
   color: #FFFFFF;
   margin: 0 auto;
   font-weight: 300; }
+  @media (max-width: 900px) {
+    .block__text {
+      font-size: 15px; } }
   .block__text_2 {
     margin-top: 30px;
     width: 100%;
@@ -1358,6 +1392,9 @@ input::-webkit-inner-spin-button {
     line-height: 23px;
     color: #1F1B20;
     padding: 0 36px; }
+    @media (max-width: 900px) {
+      .block__text_2 {
+        font-size: 15px; } }
 
 .btn_wrapper {
   margin-top: 40px; }
